objects/ssot__EngagementChannelUsage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConsentType__c</fullName>
        <label>Consent Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeploymentStatus__c</fullName>
        <label>Deployment Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeploymentType__c</fullName>
        <label>Deployment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorReasonType__c</fullName>
        <label>Error Reason Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engagement Channel Usage Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718861633579_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementChannelUsage_EngagementCha_rel</label>
        <referenceTo>ssot__EngagementChannel__dlm</referenceTo>
        <relationshipLabel>EngagementChannelUsage_EngagementCha_rel</relationshipLabel>
        <relationshipName>rel_1718861633579_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>